# softboon

./: .gitmodules  LICENSE  README.md
board/: .gitignore  Basket_Mar09_0734PM.xls  boondocker-softstart.kicad_pcb  boondocker-softstart.kicad_prl  boondocker-softstart.kicad_pro  boondocker-softstart.kicad_sch  fp-lib-table  sym-lib-table
board/lib/: README.md
board/softboon-r1/: boondocker-softstart-B_Cu.gbr  boondocker-softstart-B_Mask.gbr  boondocker-softstart-B_Paste.gbr  boondocker-softstart-B_Silkscreen.gbr  boondocker-softstart-Edge_Cuts.gbr  boondocker-softstart-F_Cu.gbr  boondocker-softstart-F_Mask.gbr  boondocker-softstart-F_Paste.gbr  boondocker-softstart-F_Silkscreen.gbr  boondocker-softstart-NPTH.drl  boondocker-softstart-PTH.drl  boondocker-softstart-job.gbrjob
firmware/: Cargo.toml  flash  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
