[package]
edition = "2021"
name = "softboon"
version = "0.1.0"
license = "MIT"

[dependencies]
# Change stm32f091rc to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", path = "./embassy/embassy-stm32", features = [ "defmt", "memory-x", "stm32f030f4", "time-driver-any", "exti", "unstable-pac"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-sync = { version = "0.6.2", path = "./embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "./embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "./embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.dev]
lto = true
debug = "full"
opt-level = "s"

[profile.release]
lto = true
debug = "full"
opt-level = "s"
